objects/CN_Demo_Used_Product__c.object
<CustomObject>
    <fields>
        <fullName>CN_Demo_Report__c</fullName>
        <label>Demo Report</label>
        <referenceTo>CN_Demo_Report__c</referenceTo>
        <relationshipLabel>Demo Used Products</relationshipLabel>
        <relationshipName>Demo_Used_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CN_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CN_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Demo Used Products</relationshipLabel>
        <relationshipName>Demo_Used_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Demo Used Product</label>
    <nameField>
        <displayFormat>DRP-{0000000000}</displayFormat>
        <label>Demo Used Product ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Demo Used Products</pluralLabel>
    <recordTypes>
        <fullName>CN_Demo_Used_Product</fullName>
        <active>true</active>
        <label>CN Demo Used Product</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CN_Check_Product_Acitve</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
ISCHANGED( CN_Product__c ),
NOT( CN_Product__r.IsActive )
)</errorConditionFormula>
        <errorDisplayField>CN_Product__c</errorDisplayField>
        <errorMessage>Product is inactive</errorMessage>
    </validationRules>
</CustomObject>